# leeroo-client

./: .gitignore  README.md  math_tutor.json  pyproject.toml  setup.py
leeroo_client/: client.py
notebooks/: hotel_customer_care.ipynb  leeroo_coding_tutor.ipynb  leeroo_math_tutor.ipynb  leeroo_text_to_sql.ipynb  math_tutor.json  text_to_sql.ipynb  texttosql_seed_data.json
